feat: unique label, for similar landmarks

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
             <a href="#about" class="logo1" aria-label="logo">LOGO</a>
         </nav>
         <!--END OF MOBILE NAV-->
-        <header aria-label="header">
+        <header>
             <a href="#about" class="logo2" aria-label="logo">LOGO</a>
-            <nav id="desktop-nav" aria-label="desktop-navigation">
+            <nav id="desktop-nav" aria-label="desktop">
                 <ul class="nav-links">
                     <li><a href="#">Home</a></li>
                     <li><a href="#benefits">Benefits</a></li>
@@ -69,7 +69,7 @@
             <!--END OF DESKTOP NAV-->
         </header>
         <!--END OF HEADER-->
-        <section id="about">
+        <section id="about" aria-label="about">
             <figure class="container" aria-label="about content">
                 <article class="about-article">
                     <a href="apply.html">
@@ -98,7 +98,7 @@
                 />
             </figure>
         </section>
-        <section id="benefits">
+        <section id="benefits" aria-label="benefits">
             <h2>Benefits</h2>
             <figure class="container" aria-label="benefits content">
                 <article class="benefits-column">
@@ -219,7 +219,7 @@
             </figure>
         </section>
         <!--END OF BENEFITS SECTION-->
-        <section id="credit_cards" class="credit_section">
+        <section id="credit_cards" class="credit_section" aria-label="credit cards">
             <h2>Credit Cards</h2>
             <figure class="container" aria-label="credit card content">
                 <figure class="creditcard" aria-label="platinum card content">
@@ -398,7 +398,7 @@
             </figure>
         </section>
         <!--END OF CREDIT CARDS SECTION-->
-        <footer aria-label="footer">
+        <footer>
             <section id="footer-main">
                 <article class="footer-column">
                     <h3 class="footer-title">Permalinks</h3>
