--- a/signin.html
+++ b/signin.html
@@ -55,9 +55,9 @@
             <a href="index.html" class="logo1" aria-label="logo">LOGO</a>
         </nav>
         <!--END OF MOBILE NAV-->
-        <header aria-label="header">
+        <header>
             <a href="index.html" class="logo2" aria-label="logo">LOGO</a>
-            <nav id="desktop-nav" aria-label="desktop navigation">
+            <nav id="desktop-nav" aria-label="desktop">
                 <ul class="nav-links" aria-label="navigation links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="index.html#benefits">Benefits</a></li>
@@ -70,8 +70,8 @@
             <!--END OF DESKTOP NAV-->
         </header>
         <!--END OF HEADER-->
-        <article class="sign-in">
-            <figure class="container" aria-label="sign-in form">
+        <article class="sign-in" aria-label="sign in">
+            <figure class="container" aria-label="sign in form">
                 <form action="sign in" method="post">
                     <fieldset>
                         <legend class="signin-legend">
@@ -122,7 +122,7 @@
                         </label>
                     </fieldset>
                     <fieldset>
-                        <legend class="reminder-prompt">
+                        <legend class="reminder-prompt" aria-label="reminder prompt">
                             <small class="forgot-password"><a href="signin.html">Forgot UserName or Password?</a></small>
                             <small class="forgot-password"><a href="signin.html">Create New Online Account</a></small>
                         </legend>
@@ -132,7 +132,7 @@
             <!--END OF SIGN IN FORM-->
         </article>
         <!--END OF SIGN IN ARTICLE-->
-        <footer aria-label="footer">
+        <footer>
             <section id="footer-main">
                 <article class="footer-column">
                     <h3 class="footer-title">Permalinks</h3>   
