--- a/apply.html
+++ b/apply.html
@@ -53,9 +53,9 @@
             <a href="index.html" class="logo1" aria-label="logo">LOGO</a>
         </nav>
         <!--END OF MOBILE NAV-->
-        <header aria-label="header">
+        <header>
             <a href="index.html" class="logo2" aria-label="logo">LOGO</a>
-            <nav id="desktop-nav" aria-label="desktop navigation">
+            <nav id="desktop-nav" aria-label="desktop">
                 <ul class="nav-links" aria-label="navigation links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="index.html#benefits">Benefits</a></li>
@@ -68,7 +68,7 @@
             <!--END OF DESKTOP NAV-->
         </header>
         <!--END OF HEADER-->
-        <article class="application">
+        <article class="application" aria-label="application">
             <figure class="container" aria-label="application form content">
                 <h2>Application Form</h2>
                 <form action="application form" method="post">
@@ -131,7 +131,7 @@
             </figure>
         </article>
         <!--END OF APPLICATION FORM-->
-        <footer id="footer" aria-label="footer">
+        <footer>
             <section id="footer-main">
                 <article class="footer-column">
                     <h3 class="footer-title">Permalinks</h3>
