--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
         <!--END OF MOBILE NAV-->
         <header aria-label="header">
             <a href="index.html" class="logo2" aria-label="logo">LOGO</a>
-            <nav id="desktop-nav" aria-label="desktop navigation">
+            <nav id="desktop-nav" aria-label="desktop">
                 <ul class="nav-links" aria-label="navigation links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="index.html#benefits">Benefits</a></li>
@@ -69,7 +69,7 @@
             <!--END OF DESKTOP NAV-->
         </header>
         <!--END OF HEADER-->
-        <section id="contact" class="contact">
+        <section id="contact" class="contact" aria-label="contact">
             <figure class="container" aria-label="contact content" >
                 <form action="contact-form">
                     <fieldset>
@@ -145,7 +145,7 @@
             </figure>
             <!--END OF ASIDE INFORMATION-->
         </section>
-        <footer aria-label="footer">
+        <footer>
             <section id="footer-main">
                 <article class="footer-column">
                     <h3 class="footer-title">Permalinks</h3>
