fix:  added correct semantic tag

--- a/contact.html
+++ b/contact.html
@@ -99,7 +99,7 @@
                 <aside aria-label="aside">
                     <h3>Contact Information</h3>
                     <p>How can we help?</p>
-                    <figure class="info" aria-label="how to reach us">
+                    <address class="info">
                         <article>
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 fill="none" stroke="#05141A" stroke-width="2" stroke-linecap="round"
@@ -140,7 +140,7 @@
                                 <p>(404) 000-0001</p>
                             </figure>
                         </article>
-                    </figure>
+                    </address>
                 </aside>
             </figure>
             <!--END OF ASIDE INFORMATION-->
